# Chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  chess.cpp
include/: Bishop.h  Bishop.hpp  Board.h  Board.hpp  Clock.h  Constants.h  Constants.hpp  King.h  King.hpp  Knight.h  Knight.hpp  Open.h  Pawn.h  Pawn.hpp  Piece.h  Piece.hpp  Player.h  Player.hpp  Queen.h  Queen.hpp  Rook.h  Rook.hpp  ThatOnePiece.hpp  WelcomeScreen.h  WelcomeScreen.hpp
src/: Bishop.cpp  Board.cpp  Constants.cpp  King.cpp  Knight.cpp  Open.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Rook.cpp  main.cpp
